@@ -5,9 +5,10 @@
 **
 */
 
-#define FICL_ROBUST  0
+#define FICL_ROBUST                     (1)
 #define FICL_WANT_EXTENDED_PREFIX       (1)
 #define FICL_DEFAULT_DICTIONARY_SIZE    (32768)
+#define FICL_USER_CELLS                 (64)
 
 #ifdef darwin
 #define FICL_OS   1
